# TASK-56

./: metadata.json
repo/backend/: Cargo.toml  Dockerfile
repo/backend/migrations/: 001_create_users_and_auth.sql  002_create_journals.sql  003_create_teaching_resources.sql  004_create_courses_and_sections.sql  005_create_attachments.sql  006_create_checkins.sql  007_create_metrics_and_dashboards.sql  008_create_reports.sql  009_create_audit_logs.sql  010_create_retention_policies.sql  011_create_admin_settings.sql  012_phase3_library_extensions.sql  013_phase4_academic_extensions.sql  014_phase5_checkins_metrics_dashboards.sql  015_phase6_reports_and_retention.sql  016_phase6_section_encryption.sql  017_rename_user_sessions_compat.sql  018_normalize_report_formats.sql  019_artifact_dek.sql  020_artifact_backfill_status.sql  021_fix_course_hours_to_float.sql
repo/backend/scripts/: entrypoint.sh
repo/backend/seeds/: 001_seed_roles_and_permissions.sql  002_seed_departments.sql  003_seed_users.sql  004_seed_config_defaults.sql  005_seed_admin_settings.sql  006_seed_checkin_retry_reasons.sql  007_seed_phase5_admin_settings.sql  008_seed_phase6_defaults.sql
repo/backend/src/: lib.rs  main.rs
repo/backend/src/api/: admin_config.rs  artifact_backfill.rs  attachments.rs  audit_logs.rs  auth.rs  catchers.rs  checkins.rs  courses.rs  dashboards.rs  download.rs  guards.rs  health.rs  journals.rs  metrics.rs  mod.rs  reports.rs  retention.rs  roles.rs  sections.rs  teaching_resources.rs  users.rs
repo/backend/src/application/: artifact_backfill.rs  artifact_crypto.rs  attachment_service.rs  audit_service.rs  auth_service.rs  authorization.rs  checkin_service.rs  course_service.rs  dashboard_service.rs  encryption.rs  export_service.rs  import_service.rs  journal_service.rs  lockout.rs  masking.rs  metric_service.rs  mod.rs  password.rs  principal.rs  report_service.rs  resource_service.rs  retention_service.rs  scope.rs  section_service.rs  session.rs  user_service.rs
repo/backend/src/config/: mod.rs
repo/backend/src/domain/: audit.rs  auth.rs  checkin.rs  course.rs  dashboard.rs  journal.rs  metric.rs  mod.rs  report.rs  retention.rs  role.rs  section.rs  teaching_resource.rs  user.rs  versioning.rs
repo/backend/src/errors/: mod.rs
repo/backend/src/infrastructure/: bootstrap.rs  database.rs  mod.rs  scheduler.rs  storage.rs
repo/backend/tests/: api_routes_test.rs
repo/frontend/: Cargo.toml  Dioxus.toml  Dockerfile  nginx.conf
repo/frontend/assets/: main.css
repo/frontend/src/: main.rs  router.rs
repo/frontend/src/api/: admin_config.rs  attachments.rs  audit_logs.rs  auth.rs  checkins.rs  client.rs  courses.rs  dashboards.rs  imports.rs  journals.rs  metrics.rs  mod.rs  reports.rs  resources.rs  retention.rs  sections.rs
repo/frontend/src/components/: attachment_panel.rs  dashboard_panel_card.rs  data_table.rs  (+6 more)
(+128 files in other folders)
