[package]
name = "scholarly-backend"
version = "0.2.0"
edition = "2021"
description = "Scholarly — offline scholarly resources and teaching operations API"

[lib]
name = "scholarly_backend"
path = "src/lib.rs"

[[bin]]
name = "scholarly-backend"
path = "src/main.rs"

[dependencies]
# Web framework — `json` for JSON body support, `tokio-macros` is pulled via tokio.
rocket = { version = "0.5", features = ["json"] }

# Async filesystem I/O for attachment storage (tokio::fs used directly).


# Database
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid", "macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth / crypto
argon2 = { version = "0.5", features = ["std"] }
password-hash = "0.5"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
base64 = "0.22"
subtle = "2.5"

# Phase 4 — bulk import/export
csv = "1.3"
calamine = "0.25"
rust_xlsxwriter = "0.71"

# Phase 5 — IP/CIDR matching for the on-campus network rule
ipnet = "2.9"

# Phase 6 — in-process report scheduler (cron expression parsing)
cron = "0.12"

# Phase 6 — AES-256-GCM field-level encryption for sensitive columns
aes-gcm = "0.10"
generic-array = "0.14"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
async-trait = "0.1"

[dev-dependencies]
# Used by the DB-backed integration tests in tests/api_routes_test.rs.
# The packages below are already in [dependencies] so no extra download
# is needed; listing them here makes the intent explicit and prevents
# Cargo from unexpectedly stripping them from the integration-test binary.
serde_json = "1"
tokio = { version = "1", features = ["full"] }
