[package]
name = "scholarly-frontend"
version = "0.1.0"
edition = "2021"
description = "Dioxus web frontend for the Scholarly resources system"

[dependencies]
dioxus = { version = "0.6", features = ["web"] }
dioxus-router = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.6", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "Storage",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlAnchorElement",
    "HtmlInputElement",
    "FileList",
    "File",
    "Blob",
    "BlobPropertyBag",
    "FormData",
    "Url",
    "Node",
] }
futures = "0.3"
